--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Thefirstrail</title>
+    <title>Thefirstrails</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,9 +10,9 @@
   </head>
 
   <body>
-    <%= link_to "ホーム", root_path %>
-    <% if user_signed_in? %>
-       <p>こんにちわ, <%= current_user.email %></p>
+     <%= link_to "ホーム", root_path %>
+     <% if user_signed_in? %>
+       <p>こんにちわ, <%= link_to current_user.email  , users_show_path %> </p>
        <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
      <% else %>
        <%= link_to "サインイン", new_user_session_path %>
